--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -103,4 +103,4 @@
   </table>
 </div>
 
-<div ng-include="'views/course_list.html'" ></div>
+<div ng-include="'views/class_site_list.html'" ></div>
