Add date formatting to Assignment table

--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -49,7 +49,7 @@
         <td>{{assignment.points_earned}}</td>
         <td>{{assignment.points_possible}}</td>
         <td>{{assignment.weight}}</td>
-        <td>{{assignment.due_date}}</td>
+        <td>{{assignment.due_date | date}}</td>
         <td>{{assignment.grader_comment}}</td>
       </tr>
     </tbody>
