Add progress bar to interface

--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -122,3 +122,8 @@ body {
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
+
+.progress {
+  width: 200px;
+  margin-left: 150px;
+}
