--- a/sespa/app/views/advisor_list.html
+++ b/sespa/app/views/advisor_list.html
@@ -30,3 +30,10 @@
     </tbody>
   </table>
 </div>
+
+<div ng-show="progress > 0 && progress < 100" class="progress">
+<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{progress}}%;">
+  <span class="sr-only">{{progress}}% Complete</span>
+</div>
+
+</div>
