--- a/sespa/app/views/student_list.html
+++ b/sespa/app/views/student_list.html
@@ -49,10 +49,6 @@
     </tr>
   </tbody>
 </table>
-
-<div ng-show="progress > 0 && progress < 100" class="progress">
-<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{progress}}%;">
-  <span class="sr-only">{{progress}}% Complete</span>
 </div>
 
-</div>
+<dig-data-fetch-progress progress="{{progress}}" />
