Add progress bar to class site detail

--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -56,6 +56,8 @@
   </table>
 </div>
 
+<dig-data-fetch-progress progress="{{progress}}"></dig-data-fetch-progress>
+
 <h3>Class Site History</h3>
 <div ng-if="!(historyLength > 0)">
   <p>There is no class site history data for this student.</p>
