Add padding to main content.
Fixes issue #48

--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -55,6 +55,10 @@ body {
   padding-bottom: 19px;
 }
 
+.content {
+    margin: 0 20px;
+}
+
 /* Custom page footer */
 .footer {
   padding-top: 19px;
