--- a/sespa/app/views/class_site_list.html
+++ b/sespa/app/views/class_site_list.html
@@ -12,10 +12,13 @@
             <span class="fa fa-caret-down" ng-show="sortType == 'class_site.description' &amp;&amp; !sortReverse"></span>
             <span class="fa fa-caret-up" ng-show="sortType == 'class_site.description' &amp;&amp; sortReverse"></span>
           </a>
-      </th>
+        </th>
         <th>
           <a>Status</a>
-      </th>
+        </th>
+        <th>
+          <a>Class Standing</a>
+        </th>
       </tr>
     </thead>
     <tbody>
@@ -24,6 +27,17 @@
         <td>
           <img alt="{{classSite.status}}" class="class-site-status {{ classSite.status | lowercase }}" ng-src="images/Status_Icons_{{classSite.status}}.png"/>
       	</td>
+        <td>
+          <div class="progress">
+            <div class="progress-bar studentGradeBar" role="progressbar" aria-valuenow="{{classSite.studentAve}}"
+              aria-valuemin="0" aria-valuemax="100" style="width:{{classSite.studentAve}}%" title="Student Grade: {{classSite.studentAve}}%" data-toggle="tooltip" data-placement="bottom" tooltip>
+              <span class="sr-only">Student Grade: {{classSite.studentAve}}%</span>
+            </div>
+            <div class="classAveBar" data-toggle="tooltip" data-placement="bottom" style="left: {{classSite.classAve}}%;" title="Class Average Grade: {{classSite.classAve}}%" tooltip>
+              <span class="sr-only">Class Average Grade: {{classSite.classAve}}%</span>
+            </div>
+          </div>
+        </td>
       </tr>
     </tbody>
   </table>
