Change text color in dropdown menu in mobile view
Fixes issue #68.

--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -125,6 +125,10 @@ body {
   .hide-small {
     display: none;
   }
+  
+  .open > .dropdown-menu {
+    color: #9d9d9d;
+  }
 }
 
 /* For ng-cloak */
