Fix toggle problem for menu
Fixes issue #38. Also fix the problem of the style which causes problem
when the width of window is between 600px and 768px.

--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -121,13 +121,15 @@ body {
   margin-right: 5px;
 }
 
+@media screen and (max-width: 768px) {
+  .open > .dropdown-menu {
+    color: #9d9d9d;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .hide-small {
     display: none;
-  }
-  
-  .open > .dropdown-menu {
-    color: #9d9d9d;
   }
 }
 
