Stylistic changes added on pages other than class site history.

--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -1,4 +1,5 @@
 <h2 class="sub-header">{{student.first_name}} {{student.last_name}}</h2>
+<hr class="main-no-margin-top"/>
 
 <div class="col-sm-8">
     <div ng-include="'views/class_site_list.html'" ></div>
