--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -1,8 +1,10 @@
 <h2 ng-if="classSiteDetailHeader" class="sub-header">{{classSiteDetailHeader}}</h2>
 <hr class="main-no-margin-top"/>
-<h3 class="main-h3">Class : {{classSite.class_site.description}}
-  <img alt="{{classSite.status}}" class="class-site-status {{ classSite.status | lowercase }}" ng-src="images/Status_Icons_{{classSite.status}}.png"/>
-</h3>
+<h3 class="main-h3">Class : {{classSite.class_site.description}}</h3>
+<p>
+    <img alt="{{classSite.status}}" class="class-site-status {{ classSite.status | lowercase }}" ng-src="images/Status_Icons_{{classSite.status}}.png"/>
+    <span class="label label-primary">{{classSite.class_site.source_system}}</span>
+</p>
 <nvd3-line-chart
 	data="scoreData"
     id="score-chart"
