--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -17,7 +17,7 @@
             <th><a>Advisors</a></th>
             <td><p ng-repeat="advisor in advisors">
                 {{ advisor.advisor.first_name }} {{ advisor.advisor.last_name }}
-                <span class="glyphicon glyphicon-info-sign" aria-hidden="true" title="{{advisor.roles}}"></span>
+                <span class="glyphicon glyphicon-info-sign" aria-hidden="true" title="{{advisor.role}}"></span>
             </p></td>
           </tr>
         </tbody>
